# remote-sandbox-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.superpowers/sdd/: task-13-report.md
docs/adr/: 0001-capture-remote-execution-environment.md
skills/remote-sandbox/: SKILL.md
src/remote_sandbox/: __init__.py  __main__.py  _engine_audit.py  _engine_events.py  _engine_metadata.py  _engine_planning.py  _legacy_reconcile.py  _transport_fingerprint.py  _transport_local.py  _transport_paths.py  _transport_remote.py  _transport_tar.py  agent.py  bind.py  cli.py  conflicts.py  daemon.py  engine.py  fetch.py  initial_sync.py  journal.py  lock.py  manifest.py  marker.py  namespace.py  peek.py  placeholder.py  policy.py  prompt.py  reconcile.py  registry.py  remote_client.py  remote_protocol.py  resources.py  scan.py  settings.py  shell.py  skill_install.py  ssh.py  ssh_config.py  (+7 more)
tests/e2e/: Dockerfile  conftest.py  sshd_config  test_disconnect_recovery.py  test_fixture_contract.py  test_full_workflow.py  test_prompt_pty.py
tests/helpers/: sync_harness.py
tests/integration/: conftest.py  test_agent_zipapp.py  test_audit_recovery.py  test_bind_validation.py  test_cli_main_routes.py  test_conflict_resolution.py  test_daemon_restart.py  test_forget_cleanup.py  test_incremental_sync.py  test_initial_sync.py  test_initial_sync_concurrent_changes.py  test_local_watcher_journal.py  test_prompt_preserves_input.py  test_prompt_real_pty.py  test_remote_agent_commands.py  test_remote_agent_polling.py  test_run_exit_status.py  test_same_session_shell.py  test_transport_rsync.py  test_transport_tar.py  test_watcher_daemon_latency.py
tests/performance/: conftest.py  test_sync_performance.py
tests/unit/: conftest.py  test_cli_commands.py  test_cli_enter_and_bind_branches.py  test_cli_wave4_paths.py  test_conflict_store.py  test_daemon_control_protocol.py  test_daemon_failure_modes.py  test_entry_points.py  (+42 more)
(+11 files in other folders)
