[project]
name = "remote-sandbox"
version = "0.2.6"
description = "Editor-agnostic remote workspace sandbox with SSH-backed execution and sync"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "watchdog>=6.0.0",
    "wcwidth>=0.2.13",
]
keywords = ["ssh", "remote", "sandbox", "sync", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/jiang7f/remote-sandbox-cli"
Repository = "https://github.com/jiang7f/remote-sandbox-cli"
Issues = "https://github.com/jiang7f/remote-sandbox-cli/issues"

[project.scripts]
rsb = "remote_sandbox.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "remote_sandbox"
source-include = ["LICENSE", "skills/remote-sandbox/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: requires Docker and an SSH fixture",
    "performance: opt-in performance benchmark",
]

[tool.coverage.run]
parallel = true
patch = ["subprocess"]
